Added special context tokens

--- a/02-working-with-text/chapter2.ipynb
+++ b/02-working-with-text/chapter2.ipynb
@@ -212,9 +212,101 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d73c986d-b111-495f-ba32-f9496ac92d27",
+   "metadata": {},
+   "source": [
+    "## Special Context Tokens\n",
+    "\n",
+    "Modify the tokenizer to handle unknown words, and address the usage and addition of special context tokens that can enhance a model's understanding of context or other relevent information in the text. \n",
+    "\n",
+    "Below we'll use <|unk|> to represent unknown words, and <|endoftext|> to signal text following the token presents a new text."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6424c0f-1fd3-4bf2-b916-8f78258c7e61",
+   "id": "08f68fe9-0cb8-4d15-8ab8-a5c4ecf73cbd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add the tokens\n",
+    "all_tokens = sorted(list(set(preprocessed)))\n",
+    "all_tokens.extend([\"<|endoftext|>\", \"<|unk|>\"])\n",
+    "vocab = {token:integer for integer,token in enumerate(all_tokens)}\n",
+    "\n",
+    "print(len(vocab.items()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c8f19bd-1fa0-49a5-86c4-d1de6a681a03",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Updated tokenizer that can deal with unknown words\n",
+    "class SimpleTokenizerV2:\n",
+    "    def __init__(self, vocab):\n",
+    "        self.str_to_int = vocab\n",
+    "        self.int_to_str = { i:s for s,i in vocab.items()}\n",
+    "\n",
+    "    def encode(self, text):\n",
+    "        preprocessed = re.split(r'([,.:;?_!\"()\\']|--|\\s)', text)\n",
+    "        preprocessed = [\n",
+    "            item.strip() for item in preprocessed if item.strip()\n",
+    "        ]\n",
+    "        preprocessed = [item if item in self.str_to_int\n",
+    "                        else \"<|unk|>\" for item in preprocessed]\n",
+    "\n",
+    "        ids = [self.str_to_int[s] for s in preprocessed]\n",
+    "        return ids\n",
+    "\n",
+    "    def decode(self, ids):\n",
+    "        text = \" \".join([self.int_to_str[i] for i in ids])\n",
+    "\n",
+    "        text = re.sub(r'\\s+([,.:;?!\"()\\'])', r'\\1', text)\n",
+    "        return text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b69d4b21-aba0-4b3e-9cb7-9ba4b808fe0c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text1 = \"Hello, do you like tea?\"\n",
+    "text2 = \"In the sunlit terraces of the palace.\"\n",
+    "text = \" <|endoftext|> \".join((text1, text2))\n",
+    "print(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3b2d3b5-4ea6-49ee-8b1c-12fb98bf9006",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer = SimpleTokenizerV2(vocab)\n",
+    "print(tokenizer.encode(text))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b1097f6-0415-4277-bf2d-0051f7a2aaaf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(tokenizer.decode(tokenizer.encode(text)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58f8d258-945b-42a2-8ff9-1854fda8cce0",
    "metadata": {},
    "outputs": [],
    "source": []
