added bpe tokenizer, sliding window to generate input-target pairs for training

--- a/02-working-with-text/chapter2.ipynb
+++ b/02-working-with-text/chapter2.ipynb
@@ -304,9 +304,157 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "76b208bd-6dfa-49e2-bf6e-3d3cb589d171",
+   "metadata": {},
+   "source": [
+    "## Byte Pair Encoding Tokenizer\n",
+    "\n",
+    "BPE tokenizers break down unknown words into subwords and individual characters. This way, a BPE tokenizer can parse any word and doesn’t need to replace unknown words with special tokens, such as <|unk|>.\n",
+    "\n",
+    "Both GPT-2 and GPT-3 used this tokenizer algorithm.\n",
+    "\n",
+    "Implementation library - [tiktoken](https://github.com/openai/tiktoken)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58f8d258-945b-42a2-8ff9-1854fda8cce0",
+   "id": "91e7babb-993e-4d6c-b601-0e3c722876e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from importlib.metadata import version\n",
+    "import tiktoken\n",
+    "print(\"tiktoken version:\", version(\"tiktoken\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "daa4259c-3fdb-45a5-bfcf-5861e812df9c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer = tiktoken.get_encoding(\"gpt2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aede52aa-08ed-44ce-84e5-41d10d761668",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = (\n",
+    "    \"Hello, do you like tea? <|endoftext|> In the sunlit terraces\"\n",
+    "     \"of someunknownPlace.\"\n",
+    ")\n",
+    "integers = tokenizer.encode(text, allowed_special={\"<|endoftext|>\"})\n",
+    "print(integers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d164bf85-3ba8-4d3e-b3e6-dcfab3780d4e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "strings = tokenizer.decode(integers)\n",
+    "print(strings)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d153826-5cfe-43cc-963c-3a2742fa8180",
+   "metadata": {},
+   "source": [
+    "## Data Sampling with Sliding Window\n",
+    "\n",
+    "The next step in creating the embeddings for the LLM is to generate the input–target pairs required for training an LLM. What do these input–target pairs look like? As we already learned, LLMs are pretrained by predicting the next word in a text.\n",
+    "\n",
+    "Consider a text sample \"LLMS learn to predict one word at a time\".\n",
+    "\n",
+    "Pairings for training using sliding windows are \\[LLMs\\]\\[learn\\],  \\[LLMs learn\\]\\[to\\],  \\[LLMs learn to\\]\\[predict\\], and so on,\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1981f259-a806-4611-8b38-f80fb96067e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Tokenize the input using the BPE tokenizer\n",
+    "with open(\"the-verdict.txt\", \"r\", encoding=\"utf-8\") as f:\n",
+    "    raw_text = f.read()\n",
+    "\n",
+    "enc_text = tokenizer.encode(raw_text)\n",
+    "print(len(enc_text))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86334159-ad45-485e-a758-7b13f9c0af4e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove the first 50 tokens from the dataset - doing makes for a better demo\n",
+    "enc_sample = enc_text[50:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73a426e5-0733-46c2-b177-93f4c7afcaee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create the input–target pairs for the next-word prediction task is to create two variables, x and y, \n",
+    "# where x contains the input tokens and y contains the targets, which are the inputs shifted by 1:\n",
+    "context_size = 4\n",
+    "x = enc_sample[:context_size]\n",
+    "y = enc_sample[1:context_size+1]\n",
+    "print(f\"x: {x}\")\n",
+    "print(f\"y:      {y}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6a81af1-cb32-432f-bad1-d5fac2b84c57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(1, context_size+1):\n",
+    "    context = enc_sample[:i]\n",
+    "    desired = enc_sample[i]\n",
+    "    print(context, \"---->\", desired)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de27d282-c548-450b-a699-3d7347d52f38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Same thing, except decode the token ids\n",
+    "for i in range(1, context_size+1):\n",
+    "    context = enc_sample[:i]\n",
+    "    desired = enc_sample[i]\n",
+    "    print(tokenizer.decode(context), \"---->\", tokenizer.decode([desired]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "910347ed-3fcb-4bba-b423-433cfdfa6d37",
    "metadata": {},
    "outputs": [],
    "source": []
