--- a/02-working-with-text/chapter2.ipynb
+++ b/02-working-with-text/chapter2.ipynb
@@ -452,9 +452,176 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2e42388f-2cdc-4c33-be80-de1243da0308",
+   "metadata": {},
+   "source": [
+    "There’s only one more task before we can turn the tokens into embeddings: implementing an efficient data loader that iterates over the input dataset and returns the inputs and targets as PyTorch tensors"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "910347ed-3fcb-4bba-b423-433cfdfa6d37",
+   "id": "4e949a9e-8193-422b-a297-68ba47f9ffb3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "class GPTDatasetV1(Dataset):\n",
+    "    def __init__(self, txt, tokenizer, max_length, stride):\n",
+    "        self.input_ids = []\n",
+    "        self.target_ids = []\n",
+    "\n",
+    "        token_ids = tokenizer.encode(txt)\n",
+    "\n",
+    "        for i in range(0, len(token_ids) - max_length, stride):\n",
+    "            input_chunk = token_ids[i:i + max_length]\n",
+    "            target_chunk = token_ids[i + 1: i + max_length + 1]\n",
+    "            self.input_ids.append(torch.tensor(input_chunk))\n",
+    "            self.target_ids.append(torch.tensor(target_chunk))\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.input_ids)\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        return self.input_ids[idx], self.target_ids[idx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7c20e67-6d86-4a35-97dc-b165fa80811d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_dataloader_v1(txt, batch_size=4, max_length=256,\n",
+    "                         stride=128, shuffle=True, drop_last=True,\n",
+    "                         num_workers=0):\n",
+    "    tokenizer = tiktoken.get_encoding(\"gpt2\")\n",
+    "    dataset = GPTDatasetV1(txt, tokenizer, max_length, stride)\n",
+    "    dataloader = DataLoader(\n",
+    "        dataset,\n",
+    "        batch_size=batch_size,\n",
+    "        shuffle=shuffle,\n",
+    "        drop_last=drop_last,\n",
+    "        num_workers=num_workers\n",
+    "    )\n",
+    "\n",
+    "    return dataloader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88d9a1c8-1669-47c9-841f-258e81dc89ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"the-verdict.txt\", \"r\", encoding=\"utf-8\") as f:\n",
+    "    raw_text = f.read()\n",
+    "\n",
+    "dataloader = create_dataloader_v1(\n",
+    "    raw_text, batch_size=1, max_length=4, stride=1, shuffle=False)\n",
+    "data_iter = iter(dataloader)\n",
+    "first_batch = next(data_iter)\n",
+    "print(first_batch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e296620-3cd9-48a5-9e94-0ebca00cb70c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "second_batch = next(data_iter)\n",
+    "print(second_batch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d768121-b25a-4cad-9350-a52527bdb9d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataloader = create_dataloader_v1(\n",
+    "    raw_text, batch_size=8, max_length=4, stride=4,\n",
+    "    shuffle=False\n",
+    ")\n",
+    "\n",
+    "data_iter = iter(dataloader)\n",
+    "inputs, targets = next(data_iter)\n",
+    "print(\"Inputs:\\n\", inputs)\n",
+    "print(\"\\nTargets:\\n\", targets)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b0dbd4f-b47b-46cd-b137-99ebcbde87d7",
+   "metadata": {},
+   "source": [
+    "The last step in preparing the input text for LLM training is to convert the token IDs into embedding vectors. Recall it's text to tokenized text to token ids to embedding vector. An embedding vector is a continuous vector representation of discrete data (words, tokens, etc) used in deep learning models to transform non-numeric data into a format that nueral networks can process, often implemented as a lookup operation in an embedding layer."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "487216e7-8ce2-4ecb-88a6-ec4fc9a76031",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_ids = torch.tensor([2, 3, 5, 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6d37137-e7f9-41cb-b27e-3c767ec34a7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vocab_size = 6\n",
+    "output_dim = 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc5b3242-722f-43fe-8190-450ac8e99db8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.manual_seed(123)\n",
+    "embedding_layer = torch.nn.Embedding(vocab_size, output_dim)\n",
+    "print(embedding_layer.weight)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4aa2a2e-1c75-41d2-991a-0b47cabcc308",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(embedding_layer(torch.tensor([3])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70673051-2e2a-41cf-bb71-2d693757b9d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(embedding_layer(input_ids))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e645c743-834b-483a-8ec3-a8df7905d126",
    "metadata": {},
    "outputs": [],
    "source": []
