--- a/02-working-with-text/chapter2.ipynb
+++ b/02-working-with-text/chapter2.ipynb
@@ -619,9 +619,137 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bcd485ff-3ed8-440a-8505-1ba3cf0f8e07",
+   "metadata": {},
+   "source": [
+    "## Encoding Word Positions\n",
+    "\n",
+    "The way the previously introduced embedding layer works is that the same token ID always gets mapped to the same vector representation, regardless of where the token ID is positioned in the input sequence\n",
+    "\n",
+    "LLMs themselves have an attention mechanism that doesn't have a notion of position or order of tokens within a sequence.\n",
+    "\n",
+    "In principle, the deterministic, position-independent embedding of the token ID is good for reproducibility purposes. However, since the self-attention mechanism of LLMs itself is also position-agnostic, it is helpful to inject additional position information into the LLM.\n",
+    "\n",
+    "To achieve this, we can use two broad categories of position-aware embeddings: relative positional embeddings and absolute positional embeddings. \n",
+    "\n",
+    "Absolute positional embeddings are directly associated with specific positions in a sequence. For each position in the input sequence, a unique embedding is added to the token’s embedding to convey its exact location.\n",
+    "\n",
+    " the emphasis of relative positional embeddings is on the relative position or distance between tokens. This means the model learns the relationships in terms of “how far apart” rather than “at which exact position.” The advantage here is that the model can generalize better to sequences of varying lengths, even if it hasn’t seen such lengths during training.\n",
+    "\n",
+    " Both types of positional embeddings aim to augment the capacity of LLMs to understand the order and relationships between tokens, ensuring more accurate and context-aware predictions.\n",
+    "\n",
+    "OpenAI’s GPT models use absolute positional embeddings that are optimized during the training process rather than being fixed or predefined like the positional encodings in the original transformer model. This optimization process is part of the model training itself. \n",
+    "\n",
+    "Below, we'll consider a more realistic useful embedding sizes and encode the input tokens into a 256-dimensional vector representation -- smaller than GPT 3 but still useful."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e645c743-834b-483a-8ec3-a8df7905d126",
+   "id": "e366794d-63ca-4294-8174-c23ef6fefd70",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vocab_size = 50257\n",
+    "output_dim = 256\n",
+    "token_embedding_layer = torch.nn.Embedding(vocab_size, output_dim)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "048ed9a7-e5e3-462a-8df9-3f8edf5a8889",
+   "metadata": {},
+   "source": [
+    "Embed each in each batch into a 256-diminsional vector. With a batch size of 8, with 4 tokens each, we'll have an 8 x 4 x 256 tensor\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86b4ce88-f9a0-4319-85fd-8b603f4a79fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Instantiate the data loader\n",
+    "max_length = 4\n",
+    "dataloader = create_dataloader_v1(\n",
+    "    raw_text, batch_size=8, max_length=max_length,\n",
+    "   stride=max_length, shuffle=False\n",
+    ")\n",
+    "data_iter = iter(dataloader)\n",
+    "inputs, targets = next(data_iter)\n",
+    "print(\"Token IDs:\\n\", inputs)\n",
+    "print(\"\\nInputs shape:\\n\", inputs.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96ec1634-8553-4a53-93f5-2e84115edd8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use the embedding layer to embed these token IDs into 256-diminsional vectors\n",
+    "token_embeddings = token_embedding_layer(inputs)\n",
+    "print(token_embeddings.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "377a4361-b51a-44a0-983e-345129d2ef2b",
+   "metadata": {},
+   "source": [
+    "Each token is now embedded as a 256 dim vector. For absolute positioning like GPT 3, we need another embedding layer with the same diminsionsas token_embeddings."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14939fab-53a1-414d-9b0f-a8199c65bc4c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "context_length = max_length\n",
+    "pos_embedding_layer = torch.nn.Embedding(context_length, output_dim)\n",
+    "pos_embeddings = pos_embedding_layer(torch.arange(context_length))\n",
+    "print(pos_embeddings.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "591ffcfe-c545-40ff-8edb-15cd73360343",
+   "metadata": {},
+   "source": [
+    "In the above:\n",
+    "\n",
+    "The input to the pos_embeddings is usually a placeholder vector torch.arange(context_length), which contains a sequence of numbers 0, 1, ..., up to the maximum input length –1. The context_length is a variable that represents the supported input size of the LLM. Here, we choose it similar to the maximum length of the input text. In practice, input text can be longer than the supported context length, in which case we have to truncate the text."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff6df89f-1deb-446e-a737-a745a6dcd295",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now add the position embeddings to the token embedding tensor\n",
+    "input_embeddings = token_embeddings + pos_embeddings\n",
+    "print(input_embeddings.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee858f0c-9f7b-4bd1-8442-94f7f83e8818",
+   "metadata": {},
+   "source": [
+    "The input_embeddings we created, as summarized in figure 2.19, are the embedded input examples that can now be processed by the main LLM modules, which we will begin implementing in the next chapter."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2c12c02-e1ba-4855-9c6b-9de635e63749",
    "metadata": {},
    "outputs": [],
    "source": []
