--- a/03-coding-attention-mechanisms/chapter3.ipynb
+++ b/03-coding-attention-mechanisms/chapter3.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "95b4a7f5-1698-4c09-bc1c-7460ff7d6122",
    "metadata": {},
    "outputs": [],
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "a86807cf-26d9-4e56-aa9e-84944178e7c3",
    "metadata": {},
    "outputs": [
@@ -127,7 +127,7 @@
        "        [0.0500, 0.8000, 0.5500]])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "6e75fe99-042d-45fd-9ca8-af50531da055",
    "metadata": {},
    "outputs": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "54d49e81-5bfa-4d4c-87d8-a6e74468e1ed",
    "metadata": {},
    "outputs": [
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "id": "186cab04-ebb4-44fc-ac4e-c0b0ccd1a89a",
    "metadata": {},
    "outputs": [
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "id": "5176adf2-951b-46a1-9750-661f5c3bb573",
    "metadata": {},
    "outputs": [
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "id": "93a22148-10c9-400b-9e28-147d34b9b79a",
    "metadata": {},
    "outputs": [
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "id": "ebcb4686-cce1-446c-8c4f-d8545f5ec229",
    "metadata": {},
    "outputs": [
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "3edc82ff-fa84-4c5a-aefa-296d75de7015",
    "metadata": {},
    "outputs": [],
@@ -570,9 +570,102 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "36309078-f5e0-4fae-b6fd-267df8007b01",
+   "metadata": {},
+   "source": [
+    "We can improve the SelfAttention_v1 implementation further by utilizing PyTorch’s nn.Linear layers, which effectively perform matrix multiplication when the bias units are disabled. Additionally, a significant advantage of using nn.Linear instead of manually implementing nn.Parameter(torch.rand(...)) is that nn.Linear has an optimized weight initialization scheme, contributing to more stable and effective model training."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "d0b0cb79-b8e3-4166-80b2-4fcb1f57f8b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.nn as nn\n",
+    "class SelfAttention_v2(nn.Module):\n",
+    "    def __init__(self, d_in, d_out, qkv_bias=False):\n",
+    "        super().__init__()\n",
+    "        self.W_query = nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+    "        self.W_key   = nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+    "        self.W_value = nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        keys = self.W_key(x)\n",
+    "        queries = self.W_query(x)\n",
+    "        values = self.W_value(x)\n",
+    "        attn_scores = queries @ keys.T\n",
+    "        attn_weights = torch.softmax(\n",
+    "            attn_scores / keys.shape[-1]**0.5, dim=-1\n",
+    "        )\n",
+    "        context_vec = attn_weights @ values\n",
+    "        return context_vec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "f809e9b1-1384-47f6-adb3-8391141ffa66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_2 = inputs[1]\n",
+    "d_in = inputs.shape[1]\n",
+    "d_out = 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "b2a53ba5-9cf1-473a-9b89-a41bd984e21a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[-0.0739,  0.0713],\n",
+      "        [-0.0748,  0.0703],\n",
+      "        [-0.0749,  0.0702],\n",
+      "        [-0.0760,  0.0685],\n",
+      "        [-0.0763,  0.0679],\n",
+      "        [-0.0754,  0.0693]], grad_fn=<MmBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "torch.manual_seed(789)\n",
+    "sa_v2 = SelfAttention_v2(d_in, d_out)\n",
+    "print(sa_v2(inputs))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2129d32-c476-4321-9798-2eeac7f1f4ba",
+   "metadata": {},
+   "source": [
+    "Next up: causal and multi-head elements.\n",
+    "\n",
+    "Next, we will make enhancements to the self-attention mechanism, focusing specifically on incorporating causal and multi-head elements. The causal aspect involves modifying the attention mechanism to prevent the model from accessing future information in the sequence, which is crucial for tasks like language modeling, where each word prediction should only depend on previous words.\r\n",
+    "\r\n",
+    "The multi-head component involves splitting the attention mechanism into multiple “heads.” Each head learns different aspects of the data, allowing the model to simultaneously attend to information from different representation subspaces at different positions. This improves the model’s performance in complex tasks."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e42d9fdc-8f6f-4e45-88e0-85655f2b98a4",
+   "id": "d67833e7-da6b-467c-a21b-6cb9dc8ffb2a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b8cfae9-dd54-4e90-8356-0d02088b9888",
    "metadata": {},
    "outputs": [],
    "source": []
